Load config from classpath, Fix resource loading, Update dependencies